--- a/lib_update/build.gradle
+++ b/lib_update/build.gradle
@@ -25,15 +25,15 @@ android {
 }
 
 dependencies {
-    api 'androidx.appcompat:appcompat:1.1.0'
-    api 'com.squareup.okio:okio:2.4.3'
-    api 'com.google.code.gson:gson:2.8.6'
-    api "com.squareup.okhttp3:okhttp:4.4.1"
-    api "com.squareup.okhttp3:logging-interceptor:4.4.1"
-    api "com.squareup.retrofit2:retrofit:2.8.1"
-    api "com.squareup.retrofit2:converter-gson:2.8.1"
-    api "com.squareup.retrofit2:adapter-rxjava2:2.8.1"
-    api 'io.reactivex.rxjava2:rxjava:2.2.13'
-    api 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    api 'com.qw:soulpermission:1.2.1'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.squareup.okio:okio:2.4.3'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation "com.squareup.okhttp3:okhttp:4.4.1"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.4.1"
+    implementation "com.squareup.retrofit2:retrofit:2.8.1"
+    implementation "com.squareup.retrofit2:converter-gson:2.8.1"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:2.8.1"
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.13'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'com.qw:soulpermission:1.2.1'
 }
