--- a/lib_update/src/main/AndroidManifest.xml
+++ b/lib_update/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.sunfusheng.updater.okhttp">
+    package="com.bojun.update">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -10,9 +9,7 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
 
-    <application
-        android:usesCleartextTraffic="true"
-        tools:ignore="UnusedAttribute">
+    <application>
 
         <provider
             android:name="androidx.core.content.FileProvider"
